--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <title>My work</title>
   <header>Header</header>
   <main></main>
-  <footer></footer>
+  <footer>footer 2</footer>
 </body>
 </html>
