--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <title>My work</title>
-  <header></header>
+  <header>Header</header>
   <main></main>
   <footer></footer>
 </body>
