--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
   <title>My work</title>
   <header>Header</header>
-  <main></main>
+  <main>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum possimus error odio suscipit quas et debitis inventore? Ea, dignissimos vero?
+    </p
+    >
+  </main>
   <footer>footer 2</footer>
 </body>
 </html>
